EDAN01/minizinc-1.6/tests/structure-checking/flatzinc/double-solve-bad.exp
double-solve-bad.fzn:4:
  syntax error: only one solve item is allowed
