EDAN01/minizinc-1.6/tests/structure-checking/flatzinc/double-solve-bad.fzn
% RUNS ON fzn_sc
% This causes a compile error.
solve satisfy;
solve satisfy;
